# spin-canary-install

./: .gitignore  Cargo.toml  README.md  create_plugin.sh
.github/workflows/: release.yaml
.plugin-manifests/: generate-manifest.sh  plugin-spin-compat.txt
src/: links.rs  main.rs
